@@ -1,0 +1,22 @@
+<?php
+/**
+* Initiating Projax library
+*
+* This file is responsible for initiating the Projax library
+*
+* @copyright	The ImpressCMS Project http://www.impresscms.org/
+* @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+* @package		libraries
+* @since		1.1
+* @author		marcan <marcan@impresscms.org>
+* @version		$Id: projax.php 1742 2008-04-20 14:46:20Z malanciault $
+*/
+
+class IcmsPreloadProjax extends IcmsPreloadItem
+{
+	function eventStartOutputInit() {
+		// just including the file... more to come
+		include ( ICMS_LIBRARIES_PATH."/projax/projax.php" );
+	}
+}
+?>
